@@ -43,8 +43,8 @@ git_remote = origin
 github_http = 0
 
 [MetaResources]
-repository.url  = git@github.com:kaare/Jet.git
-repository.web  = https://kaare@github.com/kaare/Jet.git
+repository.url  = git://github.com/kaare/acme-cpanauthors-danish.git
+repository.web  = https://github.com/kaare/acme-cpanauthors-danish
 repository.type = git
 
 ; overrides [Repository] if repository is on github
