@@ -1,6 +1,7 @@
 Revision history for Acme-CPANAuthors-Danish
 
 {{$NEXT}}
+  * Added ABH, JONASBN, MADZ.
 
 0.001     2011-10-18 11:58:35 Europe/Copenhagen
   * Initial release.
